# personalwebsite

./: amplify.yml
Project 1/: .dockerignore  .gitignore  Dockerfile  HOW_TO_MONITOR.md  README.md  alpaca_client.py  config.yaml  data_handler.py  docker-compose.yml  indicators.py  logger.py  main.py  monitor_bot.ps1  order_manager.py  pyproject.toml  requirements.txt  risk_manager.py  setup_venv.ps1
Project 1/app/: README.md  __init__.py  alpaca_clients.py  api_server.py  backtester.py  config.py  data_provider.py  indicators.py  main.py  news_provider.py  portfolio.py  regime_hmm.py  reporting.py  requirements.txt  sentiment.py  strategy.py  universe.py  utils.py
Project 1/app/data/: hmm_model.pkl
Project 1/strategies/: __init__.py  base_strategy.py  mean_reversion_strategy.py  momentum_strategy.py
Project 2/: .gitignore  Dockerfile  README.md  __init__.py  alpaca_clients.py  cli.py  config.py  main.py  pyproject.toml  requirements.txt  storage.py  universe.py
Project 2/backtest/: __init__.py  engine.py  fills.py  metrics.py  walkforward.py
Project 2/data/: __init__.py  features.py  historical.py  streaming.py
Project 2/execution/: __init__.py  intents.py  order_manager.py  portfolio.py  reconcile.py  risk.py
Project 2/strategies/: __init__.py  base.py
Project 2/strategies/implemented/: __init__.py  breakout_retest.py  cross_rate_tri_arb.py  grid_trader.py  liquidity_guardrails.py  market_maker_basic.py  (+4 more)
Project 2/tests/: __init__.py  conftest.py  test_backtest_engine.py  test_fills.py  test_idempotency.py  test_risk.py  test_universe.py
(+242 files in other folders)
