[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "alpaca-swing-trading"
version = "0.1.0"
description = "Alpaca swing trading bot"
requires-python = ">=3.10,<3.13"
dependencies = [
    "alpaca-py>=0.30.0,<0.44.0",
    "pandas>=2.0.0,<2.4.0",
    "numpy>=1.24.0,<2.0.0",
    "pandas-ta>=0.3.14b,<0.5.0",
    "python-dotenv>=1.0.0,<2.0.0",
    "pyyaml>=6.0,<7.0",
]

